resources/css/style_work.css
/* ... */
.hauptText .signed {
    font-size:0.9em !important;
    text-align:right !important;
    font-style: italic;
    padding-top:0.3em;
}

.hauptText .argument {
    font-size:1.0em !important;
    text-align:left !important;
    font-style:italic;
    padding-top:0.2em;
}

.form-inline > .form-group {
    vertical-align: top;
}

.glyphicon {
    font-size: 1.25em;
    top: 0.10em;
}

.inlist-head {
    font-size:1.1em !important;
}

.navbar .glyphicon {
    font-size: 1em;
}

.cardoStyle {
    font-family: 'Junicode', 'Cardo', 'Andron', 'Cabin', sans-serif;
    font-size: 1.8em;
}

.hi { 
/*    background-color: #B57D29;*/
    background-color: gold;
    padding: 0 3px 0 3px;
}

.highlighted {
    background-color: #CF9416;
/*    background-color: wheat;*/
    padding: 0 3px 0 3px;
}

.item-paragraph {
    display:block;
}

.list-index-head, .list-default-head {
    font-size:27px !important;
    font-weight:bold;
}
.list-index-item, .list-default-item {
    font-size:20px !important;
}

.note-label {
    font-style: italic;
    display:inline;
}
.note-paragraph {
    display:inline;
}
.marginal p.collapse[aria-expanded="false"] {
    display: block;
    height: 1.6em !important;
    overflow: hidden;
}
.marginal p.collapsing[aria-expanded="false"] {
    height: 1.6em !important;
}
.marginal a:not(.collapsed) {
    text-decoration: none;
    color: black;
}
.marginal a:not(.collapsed) .edited {
    color:#707070;
}
.marginal a:not(.collapsed) .original {
    color:#993333;
}
.marginal a.collapsed:after {
    content: '...⌄';
    margin-top:-1em;
    position:absolute;
}

a .original {
    color:#80005e;
}

.simple-char {
    color:inherit;
}

span.gap:after {
    content: '[…]';
    color:gray;
    font-size:70%;
}

span.blankPage {
    display:block;
}

span.label-inline {
    display:block;
    text-align:center;
    font-weight: bold;
    font-size:28px !important;
    padding:0.5em;
}

/*.page-numbers {
    padding: 3em !important;
    float: right !important;
}*/

.facs-icon {
    font-size:18px !important;
}

hr.ornament {
    width: 30%;
}

.pageNo {
   /* font-size:large;*/
    font-size: 18px !important;
    font-style: normal !important;
    font-weight: normal !important;
    font-family: 'Junicode', 'Cardo', 'Andron', 'Cabin', sans-serif;
}

.pipe {
  /*  font-size:initial;*/
    padding-bottom: 5%;
}

.poem {
    font-style:italic;
    font-size:23px !important;
/*    padding-bottom:3em !important;*/
    text-align: left !important;
}
.poem-head {
    font-size:26px;
    text-align: left !important;
}

.marginal .poem {
    font-style:italic;
    font-size:19px !important;
/*    padding-bottom:3em !important;*/
    text-align: left !important;
}
.marginal .poem-head {
    font-size:17px;
    text-align: left !important;
}

.searchResultsNav {
    position: fixed;
    top:48px;
    height:32px;
    padding: 4px 2px 4px 2px;
    z-index: 9;
    text-align: center;
    background: gold none repeat scroll 0% 0%;
    border: 1px solid tan;
}

.sidebar {
    background-color: red;
}
.sidebar-nav {
  position: absolute;
  top: 0;
  width: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
}
.sidebar-outer {
    position: relative;
}

.smallcaps {
    font-variant: small-caps;
}

.spacer {
    min-height: 60%;
}
.summaria, .summaries{
    text-align: justify;
    clear: both; 
    font-family: 'Junicode', 'Cardo', 'Andron', 'Cabin', sans-serif;
    font-size: 1.4em;
    display: block;
   /* text-indent:1em;*/
}

table {
    font-size: 1.15em;
}

span.sal-unclear:after {
    color:#993333;
    content: '[?]';
    font-style: italic;
}

span.sal-unclear-text {
    color:#993333;
    border-bottom: 2px dotted #993333;
}

.table-label {
    font-weight:bold;
    padding-right:0.9em;
}

/*a[name] {display: block; position: relative; top: -50px; visibility: hidden;}*/

.titlePage {
    /*border:medium double black;*/
    background-color:#e8f1fa;
    /* padding:0.2em;*/
    line-height: 150%;
    border-radius: 2px;
    font-family: 'Junicode', 'Cardo', 'Andron', 'Cabin', sans-serif;
    font-size: 1.8em;
    display: block;
    text-align: center;
    margin-bottom: 10%;
        
}
/* subsequent title pages: identical to first one, but without blueish background or border */
.sec-titlePage {
    /* padding:0.2em;*/
    line-height: 150%;
    border-radius: 2px;
    font-family: 'Junicode', 'Cardo', 'Andron', 'Cabin', sans-serif;
    font-size: 1.8em;
    display: block;
    text-align: center;
    margin-bottom: 10%;
}

li.toc {
    list-style-type: none; 
}

ul.toc-sub {
    list-style-type: none;
    margin-left: -2%;
}

li.list-paragraph {
    list-style-type: none; 
    /*  or  list-style: none; ? */
}

/*ul.cardoStyleUl {
    font-family: 'Junicode', 'Cardo', 'Andron', 'Cabin', sans-serif;
    font-size: initial;
}*/

span.unsichtbar, .unsichtbar {
    display:none !important;
}

span.sal-section-teaser{
    padding-left:0.5em;
    display:block;
}

.visible {
    display:inherit;
}

/*#wrapper {
    font-size: 0.94em;
    font-family: Helvetica, Arial, sans-serif;
    line-height: 150%;
}*/



/* IDs */
/*#box {
    bottom: 0; /\* increase for footer use *\/
    left: 0;
    position: absolute;
    right: 0;
    top: 4.8%; /\* spacer to show the scrollbar of the "haupttext" right under the header *\/
}*/

#buttonRight {
    /*padding-top: 6%; */
   /* padding-right: 2.5%;*/
    position: fixed; 
    z-index: 1000;
    
    /*right: 1%;
    padding: 1%;*/
    
}

#buttonLeft {
    /*padding-top: 6%; */
   /* padding-right: 2.5%;*/
   /* position: fixed; */
    z-index: 10000;
    /*left: 1%;
    padding: 1%;*/
}

/*#column {
    height: 100%;
    padding-top: 3%;
    overflow-x: hidden;
}*/

#column:before, .column:after {
    content: "";
    display: table;
}

#column:after {
    clear: both;
}

/*for  the two scrollbars and the expandable left div (switch to scroll, when height is higher than 100%*/

#container {
    width: auto; 
}



#full {
    width: 100%;
}
/* ... */

